testsuite/tests/parser/should_fail/readFail013.stderr

readFail013.hs:4:5: error: [GHC-58481]
    Parse error on input ‘`’.
    Expected one of '_', 'as', 'case', 'hiding', 'if', 'let',
                    'qualified', 'type', 'export', 'label', ...
